parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASTERISCOIGUAL
    BARRAIGUAL
    COMDOB
    CONST
    CONTINUE
    COUNT
    CURRENT
    DO
    DOBLEASTERISCOIGUAL
    EMPTY
    END_WHILE
    ESPACIOENBLANCO
    GLOBAL
    LIST
    OPEN_TAG_WITH_ECHO
    OPERACIONSUM
    OPERALOGICO_MAP
    OPERAPUT
    OPERLOGICO_OREXCLUSIVO
    OPERLOGICO_XOR
    PORCENTAJEIGUAL
    PRIVATE
    PROTECTED
    RSORT
    SALTO_DE_LINEA
    STATIC
    TEXTOSENCILLO
    WHILE

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> operacionMatematica
Rule 2     sentencias -> operador
Rule 3     sentencias -> tipoDevalorNumerico
Rule 4     sentencias -> foreach
Rule 5     sentencias -> arraymaps
Rule 6     sentencias -> tipoDeDato
Rule 7     sentencias -> parametros
Rule 8     sentencias -> funcion
Rule 9     sentencias -> monticuloHEAP
Rule 10    sentencias -> comentarios
Rule 11    sentencias -> impresion
Rule 12    sentencias -> programabasico
Rule 13    sentencias -> for
Rule 14    sentencias -> SplHeap
Rule 15    sentencias -> instrucciones
Rule 16    sentencias -> clases
Rule 17    sentencias -> INICIO instrucciones FIN
Rule 18    operador -> MAS
Rule 19    operador -> MENOS
Rule 20    operador -> MULTIPLICA
Rule 21    operador -> DIVIDE
Rule 22    operador -> MODULO
Rule 23    operador -> EXPONENCIACION
Rule 24    operacionMatematica -> VARIABLE_PHP IGUAL VARIABLE_PHP operador VARIABLE_PHP PUNTOYCOMA
Rule 25    operacionMatematica -> VARIABLE_PHP IGUAL VARIABLE_PHP operador tipoDevalorNumerico PUNTOYCOMA
Rule 26    operacionMatematica -> VARIABLE_PHP IGUAL tipoDevalorNumerico operador tipoDevalorNumerico PUNTOYCOMA
Rule 27    operacionMatematica -> VARIABLE_PHP IGUAL tipoDevalorNumerico operador tipoDevalorNumerico operaciones PUNTOYCOMA
Rule 28    operaciones -> tipoDevalorNumerico operador tipoDevalorNumerico
Rule 29    operaciones -> tipoDevalorNumerico operador tipoDevalorNumerico operador tipoDevalorNumerico
Rule 30    operaciones -> PARENIZQ operaciones PARENDER
Rule 31    operaciones -> operador PARENIZQ operaciones PARENDER operaciones
Rule 32    operaciones -> PARENIZQ operaciones PARENDER operaciones
Rule 33    operaciones -> operador PARENIZQ operaciones PARENDER
Rule 34    tipoDevalorNumerico -> ENTERO
Rule 35    tipoDevalorNumerico -> FLOTANTE
Rule 36    tipoDeDato -> ENTERO
Rule 37    tipoDeDato -> FLOTANTE
Rule 38    tipoDeDato -> CADENA
Rule 39    tipoDeDato -> VARIABLE_PHP
Rule 40    tipoDeDato -> BOOLEANO
Rule 41    tipoDeDato -> NULL
Rule 42    parametros -> tipoDeDato
Rule 43    parametros -> tipoDeDato COMA parametros
Rule 44    foreach -> FOREACH PARENIZQ VARIABLE_PHP AS AMPERSAND VARIABLE_PHP PARENDER LLAVEIZQ operacionMatematica LLAVEDER
Rule 45    arraymaps -> OPERAMAPA PARENIZQ parametros PARENDER PUNTOYCOMA
Rule 46    arraymaps -> VARIABLE_PHP IGUAL OPERAMAPA PARENIZQ parametros PARENDER PUNTOYCOMA
Rule 47    funcion -> NEW NOMBRE PARENIZQ parametros PARENDER PUNTOYCOMA
Rule 48    monticuloHEAP -> HEAP IGUAL funcion
Rule 49    instrucciones -> instruccion
Rule 50    instrucciones -> instrucciones instruccion
Rule 51    instruccion -> asignacion
Rule 52    instruccion -> echo
Rule 53    instruccion -> switchCase
Rule 54    instruccion -> funcion_argumento_opcional
Rule 55    instruccion -> verificacion_if
Rule 56    instruccion -> retornoValor
Rule 57    instruccion -> comentarios
Rule 58    instruccion -> define
Rule 59    instruccion -> impresion
Rule 60    valores -> ENTERO
Rule 61    valores -> FLOTANTE
Rule 62    valores -> CADENA
Rule 63    valores -> VARIABLE_PHP
Rule 64    valores -> BOOLEANO
Rule 65    valores -> aritmetica
Rule 66    valores -> booleanos
Rule 67    valores -> NOMBRE PARENIZQ PARENDER
Rule 68    valores -> NOMBRE PARENIZQ valores PARENDER
Rule 69    valores -> NOMBRE PARENIZQ valoresParametros PARENDER
Rule 70    valores -> crearArrayCorta
Rule 71    valores -> crearArrayLarga
Rule 72    booleano -> BOOLEANO
Rule 73    booleano -> comparacion
Rule 74    booleano -> OPERLOGICO_NOT booleanos
Rule 75    booleanos -> booleano
Rule 76    booleanos -> booleanos o_logicos booleanos
Rule 77    o_logicos -> OPERLOGICO_AND
Rule 78    o_logicos -> OPERLOGICO_OR
Rule 79    comparacion -> valores o_comparar valores
Rule 80    o_comparar -> IGUALIGUAL
Rule 81    o_comparar -> NOIGUAL
Rule 82    o_comparar -> MENORQUE
Rule 83    o_comparar -> MAYORQUE
Rule 84    o_comparar -> MAYORIGUAL
Rule 85    o_comparar -> MENORIGUAL
Rule 86    asignacion -> VARIABLE_PHP IGUAL valores PUNTOYCOMA
Rule 87    asignacion -> VARIABLE_PHP IGUAL valores PUNTOYCOMA comentarios
Rule 88    asignacion -> VARIABLE_PHP difigual valores PUNTOYCOMA
Rule 89    asignacion -> VARIABLE_PHP difigual valores PUNTO valores PUNTOYCOMA comentarios
Rule 90    asignacion -> VARIABLE_PHP difigual valores PUNTO valores PUNTOYCOMA
Rule 91    asignacion -> VARIABLE_PHP IGUAL BOOLEANO PUNTOYCOMA
Rule 92    asignacion -> VARIABLE_PHP IGUAL BOOLEANO PUNTOYCOMA comentarios
Rule 93    asignacion -> VARIABLE_PHP IGUAL funcion PUNTOYCOMA
Rule 94    asignacion -> VARIABLE_PHP IGUAL NULL PUNTOYCOMA
Rule 95    asignacion -> VARIABLE_PHP IGUAL NOMBRE PARENIZQ VARIABLE_PHP PARENDER PUNTOYCOMA
Rule 96    difigual -> PUNTOIGUAL
Rule 97    difigual -> MASIGUAL
Rule 98    difigual -> MENOSIGUAL
Rule 99    clases -> CLASS NOMBRE LLAVEIZQ LLAVEDER
Rule 100   function -> FUNCTION NOMBRE LLAVEIZQ LLAVEDER
Rule 101   function -> FUNCTION NOMBRE PARENIZQ PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 102   function -> PUBLIC FUNCTION COMPARE PARENIZQ parametros PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 103   define -> DEFINE PARENIZQ CADENA COMA valores PARENDER PUNTOYCOMA
Rule 104   operadores_aritmeticos -> MAS
Rule 105   operadores_aritmeticos -> MENOS
Rule 106   operadores_aritmeticos -> MULTIPLICA
Rule 107   operadores_aritmeticos -> DIVIDE
Rule 108   aritmetica -> valores operadores_aritmeticos valores
Rule 109   aritmetica -> aritmetica operadores_aritmeticos valores
Rule 110   echo -> ECHO NOMBRE PARENIZQ valores PARENDER PUNTOYCOMA
Rule 111   echo -> ECHO CADENA PUNTOYCOMA
Rule 112   echo -> ECHO VARIABLE_PHP PUNTOYCOMA
Rule 113   echo -> ECHO aritmetica PUNTOYCOMA
Rule 114   crearArrayCorta -> CORCHIZQ valoresArray CORCHDER
Rule 115   crearArrayLarga -> ARRAY PARENIZQ valoresArray PARENDER
Rule 116   valoresArray -> valores
Rule 117   valoresArray -> valores OPERASIG_ARRAY valores
Rule 118   valoresArray -> valores repite_valores
Rule 119   valoresArray -> valores OPERASIG_ARRAY valores repite_claveValor
Rule 120   repite_valores -> COMA valores
Rule 121   repite_valores -> COMA valores COMA
Rule 122   repite_valores -> COMA valores repite_valores
Rule 123   repite_claveValor -> COMA valores OPERASIG_ARRAY valores
Rule 124   repite_claveValor -> COMA valores OPERASIG_ARRAY valores repite_claveValor
Rule 125   switchCase -> SWITCH PARENIZQ valores PARENDER LLAVEIZQ casos_switch LLAVEDER
Rule 126   switchCase -> SWITCH PARENIZQ valores PARENDER LLAVEIZQ casos_switch DEFAULT DOSPUNTOS LLAVEIZQ instrucciones LLAVEDER LLAVEDER
Rule 127   switchCase -> SWITCH PARENIZQ valores PARENDER DOSPUNTOS casos_switch ENDSWITCH PUNTOYCOMA
Rule 128   caso_switch -> CASE valores DOSPUNTOS LLAVEIZQ instrucciones LLAVEDER
Rule 129   caso_switch -> CASE valores DOSPUNTOS LLAVEIZQ instrucciones BREAK PUNTOYCOMA LLAVEDER
Rule 130   caso_switch -> CASE valores DOSPUNTOS instrucciones
Rule 131   caso_switch -> CASE valores DOSPUNTOS instrucciones BREAK PUNTOYCOMA
Rule 132   casos_switch -> caso_switch casos_switch
Rule 133   casos_switch -> caso_switch
Rule 134   funcion_argumento_opcional -> FUNCTION NOMBRE PARENIZQ valoresParametros PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 135   valoresParametros -> valores
Rule 136   valoresParametros -> valores repite_valores_parametro
Rule 137   valoresParametros -> VARIABLE_PHP IGUAL valores
Rule 138   valoresParametros -> VARIABLE_PHP IGUAL valores repite_valores_parametro
Rule 139   repite_valores_parametro -> COMA valores
Rule 140   repite_valores_parametro -> COMA VARIABLE_PHP IGUAL valores
Rule 141   repite_valores_parametro -> COMA valores repite_valores_parametro
Rule 142   repite_valores_parametro -> COMA VARIABLE_PHP IGUAL valores repite_valores_parametro
Rule 143   verificacion_if -> IF PARENIZQ valores PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 144   verificacion_if -> IF PARENIZQ valores PARENDER instruccion
Rule 145   verificacion_if -> IF PARENIZQ valores PARENDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 146   verificacion_if -> IF PARENIZQ valores PARENDER instruccion ELSE instrucciones
Rule 147   verificacion_if -> IF PARENIZQ comparaciones operadorcomparacion comparaciones PARENDER instrucciones
Rule 148   verificacion_if -> IF PARENIZQ comparaciones operadorcomparacion comparaciones PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 149   comparaciones -> VARIABLE_PHP CORCHIZQ ENTERO CORCHDER
Rule 150   operadorcomparacion -> OPERDCOMPARACION
Rule 151   operadorcomparacion -> OPERCOMPARACION
Rule 152   operadorcomparacion -> MENORQUEI
Rule 153   operadorcomparacion -> MAYORQUEI
Rule 154   operadorcomparacion -> MENORQUE
Rule 155   operadorcomparacion -> MAYORQUE
Rule 156   retornoValor -> RETURN valores PUNTOYCOMA
Rule 157   retornoValor -> RETURN comparaciones operadorcomparacion comparaciones PUNTOYCOMA
Rule 158   retornoValor -> RETURN comparaciones operadorcomparacion comparaciones INTE ENTERO DOSPUNTOS ENTERO PUNTOYCOMA
Rule 159   comentarios -> COMENTARIO_UNA_LINEA
Rule 160   comentarios -> COMENTARIO_LARGO
Rule 161   impresion -> ECHO tipoDeDato PUNTOYCOMA
Rule 162   impresion -> PRINT tipoDeDato PUNTOYCOMA
Rule 163   impresion -> ECHO VARIABLE_PHP PUNTOYCOMA
Rule 164   impresion -> PRINT VARIABLE_PHP PUNTOYCOMA
Rule 165   programabasico -> INICIO operacionMatematica FIN
Rule 166   programabasico -> INICIO operacionMatematica impresion FIN
Rule 167   programabasico -> INICIO asignacion FIN
Rule 168   incdec -> MAYORQUEI
Rule 169   incdec -> MENORQUEI
Rule 170   incdecfor -> MAS MAS
Rule 171   incdecfor -> MENOS MENOS
Rule 172   for -> FOR PARENIZQ VARIABLE_PHP IGUAL ENTERO PUNTOYCOMA VARIABLE_PHP incdec ENTERO PUNTOYCOMA VARIABLE_PHP incdecfor PARENDER LLAVEIZQ instrucciones LLAVEDER
Rule 173   SplHeap -> CLASS NOMBRE EXTENDS SPLHEAP LLAVEIZQ function LLAVEDER

Terminals, with rules where they appear

AMPERSAND            : 44
ARRAY                : 115
AS                   : 44
ASTERISCOIGUAL       : 
BARRAIGUAL           : 
BOOLEANO             : 40 64 72 91 92
BREAK                : 129 131
CADENA               : 38 62 103 111
CASE                 : 128 129 130 131
CLASS                : 99 173
COMA                 : 43 103 120 121 121 122 123 124 139 140 141 142
COMDOB               : 
COMENTARIO_LARGO     : 160
COMENTARIO_UNA_LINEA : 159
COMPARE              : 102
CONST                : 
CONTINUE             : 
CORCHDER             : 114 149
CORCHIZQ             : 114 149
COUNT                : 
CURRENT              : 
DEFAULT              : 126
DEFINE               : 103
DIVIDE               : 21 107
DO                   : 
DOBLEASTERISCOIGUAL  : 
DOSPUNTOS            : 126 127 128 129 130 131 158
ECHO                 : 110 111 112 113 161 163
ELSE                 : 145 146
EMPTY                : 
ENDSWITCH            : 127
END_WHILE            : 
ENTERO               : 34 36 60 149 158 158 172 172
ESPACIOENBLANCO      : 
EXPONENCIACION       : 23
EXTENDS              : 173
FIN                  : 17 165 166 167
FLOTANTE             : 35 37 61
FOR                  : 172
FOREACH              : 44
FUNCTION             : 100 101 102 134
GLOBAL               : 
HEAP                 : 48
IF                   : 143 144 145 146 147 148
IGUAL                : 24 25 26 27 46 48 86 87 91 92 93 94 95 137 138 140 142 172
IGUALIGUAL           : 80
INICIO               : 17 165 166 167
INTE                 : 158
LIST                 : 
LLAVEDER             : 44 99 100 101 102 125 126 126 128 129 134 143 145 145 148 172 173
LLAVEIZQ             : 44 99 100 101 102 125 126 126 128 129 134 143 145 145 148 172 173
MAS                  : 18 104 170 170
MASIGUAL             : 97
MAYORIGUAL           : 84
MAYORQUE             : 83 155
MAYORQUEI            : 153 168
MENORIGUAL           : 85
MENORQUE             : 82 154
MENORQUEI            : 152 169
MENOS                : 19 105 171 171
MENOSIGUAL           : 98
MODULO               : 22
MULTIPLICA           : 20 106
NEW                  : 47
NOIGUAL              : 81
NOMBRE               : 47 67 68 69 95 99 100 101 110 134 173
NULL                 : 41 94
OPEN_TAG_WITH_ECHO   : 
OPERACIONSUM         : 
OPERALOGICO_MAP      : 
OPERAMAPA            : 45 46
OPERAPUT             : 
OPERASIG_ARRAY       : 117 119 123 124
OPERCOMPARACION      : 151
OPERDCOMPARACION     : 150
OPERLOGICO_AND       : 77
OPERLOGICO_NOT       : 74
OPERLOGICO_OR        : 78
OPERLOGICO_OREXCLUSIVO : 
OPERLOGICO_XOR       : 
PARENDER             : 30 31 32 33 44 45 46 47 67 68 69 95 101 102 103 110 115 125 126 127 134 143 144 145 146 147 148 172
PARENIZQ             : 30 31 32 33 44 45 46 47 67 68 69 95 101 102 103 110 115 125 126 127 134 143 144 145 146 147 148 172
PORCENTAJEIGUAL      : 
PRINT                : 162 164
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 102
PUNTO                : 89 90
PUNTOIGUAL           : 96
PUNTOYCOMA           : 24 25 26 27 45 46 47 86 87 88 89 90 91 92 93 94 95 103 110 111 112 113 127 129 131 156 157 158 161 162 163 164 172 172
RETURN               : 156 157 158
RSORT                : 
SALTO_DE_LINEA       : 
SPLHEAP              : 173
STATIC               : 
SWITCH               : 125 126 127
TEXTOSENCILLO        : 
VARIABLE_PHP         : 24 24 24 25 25 26 27 39 44 44 46 63 86 87 88 89 90 91 92 93 94 95 95 112 137 138 140 142 149 163 164 172 172 172
WHILE                : 
error                : 

Nonterminals, with rules where they appear

SplHeap              : 14
aritmetica           : 65 109 113
arraymaps            : 5
asignacion           : 51 167
booleano             : 75
booleanos            : 66 74 76 76
caso_switch          : 132 133
casos_switch         : 125 126 127 132
clases               : 16
comentarios          : 10 57 87 89 92
comparacion          : 73
comparaciones        : 147 147 148 148 157 157 158 158
crearArrayCorta      : 70
crearArrayLarga      : 71
define               : 58
difigual             : 88 89 90
echo                 : 52
for                  : 13
foreach              : 4
funcion              : 8 48 93
funcion_argumento_opcional : 54
function             : 173
impresion            : 11 59 166
incdec               : 172
incdecfor            : 172
instruccion          : 49 50 144 146
instrucciones        : 15 17 50 101 102 126 128 129 130 131 134 143 145 145 146 147 148 172
monticuloHEAP        : 9
o_comparar           : 79
o_logicos            : 76
operacionMatematica  : 1 44 165 166
operaciones          : 27 30 31 31 32 32 33
operador             : 2 24 25 26 27 28 29 29 31 33
operadorcomparacion  : 147 148 157 158
operadores_aritmeticos : 108 109
parametros           : 7 43 45 46 47 102
programabasico       : 12
repite_claveValor    : 119 124
repite_valores       : 118 122
repite_valores_parametro : 136 138 141 142
retornoValor         : 56
sentencias           : 0
switchCase           : 53
tipoDeDato           : 6 42 43 161 162
tipoDevalorNumerico  : 3 25 26 26 27 27 28 28 29 29 29
valores              : 68 79 79 86 87 88 89 89 90 90 103 108 108 109 110 116 117 117 118 119 119 120 121 122 123 123 124 124 125 126 127 128 129 130 131 135 136 137 138 139 140 141 142 143 144 145 146 156
valoresArray         : 114 115
valoresParametros    : 69 134
verificacion_if      : 55

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . operacionMatematica
    (2) sentencias -> . operador
    (3) sentencias -> . tipoDevalorNumerico
    (4) sentencias -> . foreach
    (5) sentencias -> . arraymaps
    (6) sentencias -> . tipoDeDato
    (7) sentencias -> . parametros
    (8) sentencias -> . funcion
    (9) sentencias -> . monticuloHEAP
    (10) sentencias -> . comentarios
    (11) sentencias -> . impresion
    (12) sentencias -> . programabasico
    (13) sentencias -> . for
    (14) sentencias -> . SplHeap
    (15) sentencias -> . instrucciones
    (16) sentencias -> . clases
    (17) sentencias -> . INICIO instrucciones FIN
    (24) operacionMatematica -> . VARIABLE_PHP IGUAL VARIABLE_PHP operador VARIABLE_PHP PUNTOYCOMA
    (25) operacionMatematica -> . VARIABLE_PHP IGUAL VARIABLE_PHP operador tipoDevalorNumerico PUNTOYCOMA
    (26) operacionMatematica -> . VARIABLE_PHP IGUAL tipoDevalorNumerico operador tipoDevalorNumerico PUNTOYCOMA
    (27) operacionMatematica -> . VARIABLE_PHP IGUAL tipoDevalorNumerico operador tipoDevalorNumerico operaciones PUNTOYCOMA
    (18) operador -> . MAS
    (19) operador -> . MENOS
    (20) operador -> . MULTIPLICA
    (21) operador -> . DIVIDE
    (22) operador -> . MODULO
    (23) operador -> . EXPONENCIACION
    (34) tipoDevalorNumerico -> . ENTERO
    (35) tipoDevalorNumerico -> . FLOTANTE
    (44) foreach -> . FOREACH PARENIZQ VARIABLE_PHP AS AMPERSAND VARIABLE_PHP PARENDER LLAVEIZQ operacionMatematica LLAVEDER
    (45) arraymaps -> . OPERAMAPA PARENIZQ parametros PARENDER PUNTOYCOMA
    (46) arraymaps -> . VARIABLE_PHP IGUAL OPERAMAPA PARENIZQ parametros PARENDER PUNTOYCOMA
    (36) tipoDeDato -> . ENTERO
    (37) tipoDeDato -> . FLOTANTE
    (38) tipoDeDato -> . CADENA
    (39) tipoDeDato -> . VARIABLE_PHP
    (40) tipoDeDato -> . BOOLEANO
    (41) tipoDeDato -> . NULL
    (42) parametros -> . tipoDeDato
    (43) parametros -> . tipoDeDato COMA parametros
    (47) funcion -> . NEW NOMBRE PARENIZQ parametros PARENDER PUNTOYCOMA
    (48) monticuloHEAP -> . HEAP IGUAL funcion
    (159) comentarios -> . COMENTARIO_UNA_LINEA
    (160) comentarios -> . COMENTARIO_LARGO
    (161) impresion -> . ECHO tipoDeDato PUNTOYCOMA
    (162) impresion -> . PRINT tipoDeDato PUNTOYCOMA
    (163) impresion -> . ECHO VARIABLE_PHP PUNTOYCOMA
    (164) impresion -> . PRINT VARIABLE_PHP PUNTOYCOMA
    (165) programabasico -> . INICIO operacionMatematica FIN
    (166) programabasico -> . INICIO operacionMatematica impresion FIN
    (167) programabasico -> . INICIO asignacion FIN
    (172) for -> . FOR PARENIZQ VARIABLE_PHP IGUAL ENTERO PUNTOYCOMA VARIABLE_PHP incdec ENTERO PUNTOYCOMA VARIABLE_PHP incdecfor PARENDER LLAVEIZQ instrucciones LLAVEDER
    (173) SplHeap -> . CLASS NOMBRE EXTENDS SPLHEAP LLAVEIZQ function LLAVEDER
    (49) instrucciones -> . instruccion
    (50) instrucciones -> . instrucciones instruccion
    (99) clases -> . CLASS NOMBRE LLAVEIZQ LLAVEDER
    (51) instruccion -> . asignacion
    (52) instruccion -> . echo
    (53) instruccion -> . switchCase
    (54) instruccion -> . funcion_argumento_opcional
    (55) instruccion -> . verificacion_if
    (56) instruccion -> . retornoValor
    (57) instruccion -> . comentarios
    (58) instruccion -> . define
    (59) instruccion -> . impresion
    (86) asignacion -> . VARIABLE_PHP IGUAL valores PUNTOYCOMA
    (87) asignacion -> . VARIABLE_PHP IGUAL valores PUNTOYCOMA comentarios
    (88) asignacion -> . VARIABLE_PHP difigual valores PUNTOYCOMA
    (89) asignacion -> . VARIABLE_PHP difigual valores PUNTO valores PUNTOYCOMA comentarios
    (90) asignacion -> . VARIABLE_PHP difigual valores PUNTO valores PUNTOYCOMA
    (91) asignacion -> . VARIABLE_PHP IGUAL BOOLEANO PUNTOYCOMA
    (92) asignacion -> . VARIABLE_PHP IGUAL BOOLEANO PUNTOYCOMA comentarios
    (93) asignacion -> . VARIABLE_PHP IGUAL funcion PUNTOYCOMA
    (94) asignacion -> . VARIABLE_PHP IGUAL NULL PUNTOYCOMA
    (95) asignacion -> . VARIABLE_PHP IGUAL NOMBRE PARENIZQ VARIABLE_PHP PARENDER PUNTOYCOMA
    (110) echo -> . ECHO NOMBRE PARENIZQ valores PARENDER PUNTOYCOMA
    (111) echo -> . ECHO CADENA PUNTOYCOMA
    (112) echo -> . ECHO VARIABLE_PHP PUNTOYCOMA
    (113) echo -> . ECHO aritmetica PUNTOYCOMA
    (125) switchCase -> . SWITCH PARENIZQ valores PARENDER LLAVEIZQ casos_switch LLAVEDER
    (126) switchCase -> . SWITCH PARENIZQ valores PARENDER LLAVEIZQ casos_switch DEFAULT DOSPUNTOS LLAVEIZQ instrucciones LLAVEDER LLAVEDER
    (127) switchCase -> . SWITCH PARENIZQ valores PARENDER DOSPUNTOS casos_switch ENDSWITCH PUNTOYCOMA
    (134) funcion_argumento_opcional -> . FUNCTION NOMBRE PARENIZQ valoresParametros PARENDER LLAVEIZQ instrucciones LLAVEDER
    (143) verificacion_if -> . IF PARENIZQ valores PARENDER LLAVEIZQ instrucciones LLAVEDER
    (144) verificacion_if -> . IF PARENIZQ valores PARENDER instruccion
    (145) verificacion_if -> . IF PARENIZQ valores PARENDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
    (146) verificacion_if -> . IF PARENIZQ valores PARENDER instruccion ELSE instrucciones
    (147) verificacion_if -> . IF PARENIZQ comparaciones operadorcomparacion comparaciones PARENDER instrucciones
    (148) verificacion_if -> . IF PARENIZQ comparaciones operadorcomparacion comparaciones PARENDER LLAVEIZQ instrucciones LLAVEDER
    (156) retornoValor -> . RETURN valores PUNTOYCOMA
    (157) retornoValor -> . RETURN comparaciones operadorcomparacion comparaciones PUNTOYCOMA
    (158) retornoValor -> . RETURN comparaciones operadorcomparacion comparaciones INTE ENTERO DOSPUNTOS ENTERO PUNTOYCOMA
    (103) define -> . DEFINE PARENIZQ CADENA COMA valores PARENDER PUNTOYCOMA

    INICIO          shift and go to state 18
    VARIABLE_PHP    shift and go to state 19
    MAS             shift and go to state 20
    MENOS           shift and go to state 21
    MULTIPLICA      shift and go to state 22
    DIVIDE          shift and go to state 23
    MODULO          shift and go to state 24
    EXPONENCIACION  shift and go to state 25
    ENTERO          shift and go to state 26
    FLOTANTE        shift and go to state 27
    FOREACH         shift and go to state 28
    OPERAMAPA       shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    NULL            shift and go to state 32
    NEW             shift and go to state 33
    HEAP            shift and go to state 34
    COMENTARIO_UNA_LINEA shift and go to state 35
    COMENTARIO_LARGO shift and go to state 36
    ECHO            shift and go to state 37
    PRINT           shift and go to state 38
    FOR             shift and go to state 40
    CLASS           shift and go to state 41
    SWITCH          shift and go to state 49
    FUNCTION        shift and go to state 50
    IF              shift and go to state 51
    RETURN          shift and go to state 52
    DEFINE          shift and go to state 53

    sentencias                     shift and go to state 1
    operacionMatematica            shift and go to state 2
    operador                       shift and go to state 3
    tipoDevalorNumerico            shift and go to state 4
    foreach                        shift and go to state 5
    arraymaps                      shift and go to state 6
    tipoDeDato                     shift and go to state 7
    parametros                     shift and go to state 8
    funcion                        shift and go to state 9
    monticuloHEAP                  shift and go to state 10
    comentarios                    shift and go to state 11
    impresion                      shift and go to state 12
    programabasico                 shift and go to state 13
    for                            shift and go to state 14
    SplHeap                        shift and go to state 15
    instrucciones                  shift and go to state 16
    clases                         shift and go to state 17
    asignacion                     shift and go to state 39
    instruccion                    shift and go to state 42
    echo                           shift and go to state 43
    switchCase                     shift and go to state 44
    funcion_argumento_opcional     shift and go to state 45
    verificacion_if                shift and go to state 46
    retornoValor                   shift and go to state 47
    define                         shift and go to state 48

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> operacionMatematica .

    $end            reduce using rule 1 (sentencias -> operacionMatematica .)


state 3

    (2) sentencias -> operador .

    $end            reduce using rule 2 (sentencias -> operador .)


state 4

    (3) sentencias -> tipoDevalorNumerico .

    $end            reduce using rule 3 (sentencias -> tipoDevalorNumerico .)


state 5

    (4) sentencias -> foreach .

    $end            reduce using rule 4 (sentencias -> foreach .)


state 6

    (5) sentencias -> arraymaps .

    $end            reduce using rule 5 (sentencias -> arraymaps .)


state 7

    (6) sentencias -> tipoDeDato .
    (42) parametros -> tipoDeDato .
    (43) parametros -> tipoDeDato . COMA parametros

  ! reduce/reduce conflict for $end resolved using rule 6 (sentencias -> tipoDeDato .)
    $end            reduce using rule 6 (sentencias -> tipoDeDato .)
    COMA            shift and go to state 54

  ! $end            [ reduce using rule 42 (parametros -> tipoDeDato .) ]


state 8

    (7) sentencias -> parametros .

    $end            reduce using rule 7 (sentencias -> parametros .)


state 9

    (8) sentencias -> funcion .

    $end            reduce using rule 8 (sentencias -> funcion .)


state 10

    (9) sentencias -> monticuloHEAP .

    $end            reduce using rule 9 (sentencias -> monticuloHEAP .)


state 11

    (10) sentencias -> comentarios .
    (57) instruccion -> comentarios .

  ! reduce/reduce conflict for $end resolved using rule 10 (sentencias -> comentarios .)
    $end            reduce using rule 10 (sentencias -> comentarios .)
    VARIABLE_PHP    reduce using rule 57 (instruccion -> comentarios .)
    ECHO            reduce using rule 57 (instruccion -> comentarios .)
    SWITCH          reduce using rule 57 (instruccion -> comentarios .)
    FUNCTION        reduce using rule 57 (instruccion -> comentarios .)
    IF              reduce using rule 57 (instruccion -> comentarios .)
    RETURN          reduce using rule 57 (instruccion -> comentarios .)
    COMENTARIO_UNA_LINEA reduce using rule 57 (instruccion -> comentarios .)
    COMENTARIO_LARGO reduce using rule 57 (instruccion -> comentarios .)
    DEFINE          reduce using rule 57 (instruccion -> comentarios .)
    PRINT           reduce using rule 57 (instruccion -> comentarios .)

  ! $end            [ reduce using rule 57 (instruccion -> comentarios .) ]


state 12

    (11) sentencias -> impresion .
    (59) instruccion -> impresion .

  ! reduce/reduce conflict for $end resolved using rule 11 (sentencias -> impresion .)
    $end            reduce using rule 11 (sentencias -> impresion .)
    VARIABLE_PHP    reduce using rule 59 (instruccion -> impresion .)
    ECHO            reduce using rule 59 (instruccion -> impresion .)
    SWITCH          reduce using rule 59 (instruccion -> impresion .)
    FUNCTION        reduce using rule 59 (instruccion -> impresion .)
    IF              reduce using rule 59 (instruccion -> impresion .)
    RETURN          reduce using rule 59 (instruccion -> impresion .)
    COMENTARIO_UNA_LINEA reduce using rule 59 (instruccion -> impresion .)
    COMENTARIO_LARGO reduce using rule 59 (instruccion -> impresion .)
    DEFINE          reduce using rule 59 (instruccion -> impresion .)
    PRINT           reduce using rule 59 (instruccion -> impresion .)

  ! $end            [ reduce using rule 59 (instruccion -> impresion .) ]


state 13

    (12) sentencias -> programabasico .

    $end            reduce using rule 12 (sentencias -> programabasico .)


state 14

    (13) sentencias -> for .

    $end            reduce using rule 13 (sentencias -> for .)


state 15

    (14) sentencias -> SplHeap .

    $end            reduce using rule 14 (sentencias -> SplHeap .)


state 16
